# Patterns-for-Parallel-Programing

./: CLAUDE.md  README.md
Assessment 1/: .gitignore  CLAUDE.md  README.md  REFLECTION.md  evaluate_all.pbs  integrate.cpp  tables.csv
Assessment 1/.github/workflows/: ci.yml
Assessment 1/bench/: CLAUDE.md  a1_integrate_all_schedules.o2593047
Assessment 1/bench/dynamic_64/: integrate-1.json  integrate-128.json  integrate-16.json  integrate-64.json
Assessment 1/bench/guided/: integrate-1.json  integrate-128.json  integrate-16.json  integrate-64.json
Assessment 1/bench/static/: integrate-1.json  integrate-128.json  integrate-16.json  integrate-64.json
Assessment 2/: .gitignore  CHOICE.md  CLAUDE.md  CMakeLists.txt  README.md  REFLECTION.md  evaluate.pbs  expected_output.txt  mandelbrot.h  mandelbrot_for.cpp  mandelbrot_serial.cpp  mandelbrot_tasks.cpp  perf-results-a2.json  questions.md  sweep.pbs  tables.csv
Assessment 2/.github/workflows/: ci.yml
Assessment 2/bench/: CLAUDE.md  README.md
Assessment 2/bench/evaluate/: mandelbrot-parallel_for-1.json  mandelbrot-parallel_for-128.json  (+7 more)
Assessment 3/: .gitignore  CLAUDE.md  CMakeLists.txt  EXTENSION.md  README.md  REFLECTION.md  answers.csv  expected_output.txt  questions.md  spread_evaluate.pbs  tables.csv
Assessment 3/bench/: CLAUDE.md  perf-results-a3.json
Assessment 3/bench/raw/: ext_numa_first_touch_stencil_ft-128.json  ext_numa_first_touch_stencil_naive-128.json  stencil-1.json  stencil-128.json  stencil-16.json  stencil-64.json
Assessment 3/core/: stencil.cpp
Assessment 3/extension/false_sharing/: README.md
Assessment 3/extension/numa_first_touch/: README.md  stencil_ft.cpp  stencil_naive.cpp
Introduction/: .gitignore  AGENTS.md  _quarto.yml  cx3-hpc-intro.qmd
Introduction/examples/: CMakeLists.txt
Introduction/examples/mpi/: pi_mpi.cpp  pi_mpi.pbs
Introduction/examples/openmp/: pi_openmp.pbs
Introduction/examples/serial/: pi_serial.cpp  pi_serial.pbs
Lecture 1/: CLAUDE.md  Makefile  README.md  check_queue_busyness.sh
Lecture 1/examples/: README.md
Lecture 2/: .clang-tidy  .cppcheck-suppressions  .lychee.toml  .markdownlint.yaml  CLAUDE.md  Makefile  _quarto.yml
Lecture 2/docs/: local-setup-linux.md  outcomes.md
Lecture 2/slides/: day2.qmd  day4.qmd
Lecture 2/snippets/day4/: CMakeLists.txt  collapse_loop_transform.cpp  false_sharing_demo.cpp  numa_first_touch.cpp  omp_get_wtime_timing.cpp
Lecture 2/snippets/day4/tests/: test_declare_simd_demo.cpp  test_false_sharing_demo_perf.cpp  test_omp_get_wtime_timing.cpp
Week 1/: .clang-tidy  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md
Week 1/assessment/: rubric.md
Week 1/docs/: cx3-benchmarking.md  local-setup-macos.md  outcomes.md  rome-hpl.pbs  rome-inventory.md  rome-inventory.pbs  toolchain-matrix.md
Week 1/slides/: day3.qmd  day4.qmd  index.qmd
Week 1/snippets/: CMakeLists.txt
Week 1/snippets/cmake/: EnableUBSan.cmake
Week 1/snippets/day2/: CMakeLists.txt  race_missing_default_none.cpp  schedule_comparison.cpp
Week 1/snippets/day2/tests/: test_firstprivate_pitfall.cpp  test_race_missing_default_none.cpp  test_race_missing_default_none_tsan.cpp  test_schedule_comparison.cpp  test_spike_workload.cpp  test_udr_user_defined_reduction.cpp
Week 1/snippets/day3/: CMakeLists.txt  task_dependences.cpp  task_locks.cpp  taskloop_apply.cpp  tasks_basic.cpp
Week 1/snippets/day3/tests/: test_fibonacci_tasks.cpp  test_race_flush_missing.cpp  test_single_master_nowait.cpp  test_task_locks.cpp  test_taskloop_apply.cpp  test_tasks_basic.cpp
Week 1/snippets/day4/: declare_simd_demo.cpp  numa_first_touch.cpp  omp_get_wtime_timing.cpp  simd_axpy.cpp
Week 1/snippets/day4/tests/: test_collapse_loop_transform.cpp  test_false_sharing_demo.cpp  test_numa_first_touch.cpp  test_omp_get_wtime_timing.cpp  test_simd_axpy.cpp
Week 1/snippets/recap/: CMakeLists.txt
obsidian_vault/: CLAUDE.md  Index.md
obsidian_vault/.obsidian/: app.json  core-plugins.json  graph.json  workspace.json
obsidian_vault/assessment/: A1 Benchmark Results.md  A1 Integration.md  A1 Progress.md  A2 Benchmark Results.md  A2 Mandelbrot.md  A2 Progress.md  A3 Benchmark Results.md  A3 Jacobi.md  A3 MCQ.md  A3 Progress.md  Assessment Overview.md  Pulling Template Updates.md
obsidian_vault/cluster/: AMD Rome Architecture.md  CX3 Overview.md  Filesystems.md  Intel Ice Lake Architecture.md  Login Shards.md  Login and Authentication.md  NUMA Latency.md  Topology Inspection.md
obsidian_vault/examples/: Building the Examples.md  Pi Algorithm.md  Running Locally.md  Running on CX3.md  numa_latency benchmark.md  pi_mpi.md  pi_openmp.md  pi_serial.md
obsidian_vault/modules/: Lmod Commands.md  Loading Combos.md  Module Pitfalls.md  Modules Overview.md  tools-prod gateway.md
obsidian_vault/mpi/: Building MPI.md  Hybrid MPI OpenMP.md  MPI Init Finalize.md  MPI Overview.md  MPI PBS Script.md  MPI Pitfalls.md  MPI Reduce.md  MPI Six Essentials.md  OpenMP vs MPI.md  Rank and Size.md  Reading the MPI log.md  SPMD Model.md  mpiexec.md
obsidian_vault/openmp/: Amdahls Law.md  Barriers.md  Building OpenMP.md  Data Races and TSan.md  Fork Join Model.md  Locks.md  Memory Model.md  OMP Environment Variables.md  OpenMP Overview.md  OpenMP PBS Script.md  OpenMP Pitfalls.md  Reading the OpenMP log.md  Schedules.md  Task Dependences.md  Tasks.md  Thread Pinning.md  User-Defined Reductions.md  Variable Scoping.md  _OPENMP Macro.md  critical and atomic.md  for directive.md  parallel directive.md  reduction clause.md  single and masked.md  taskloop.md
obsidian_vault/pbs/: Common PBS Mistakes.md  Interactive Jobs.md  Job Script Anatomy.md  Job States.md  Log Files.md  PBS Directives.md  PBS Environment Variables.md  PBS Overview.md  Queues.md  Resource Selection.md  check queue busyness.md  cpu_type Selection.md  pbsnodes.md  qsub qstat qdel.md
obsidian_vault/performance/: False Sharing.md  Loop Transformations.md  NUMA First Touch.md  Performance Metrics.md  Roofline Model.md  SIMD.md  STREAM and HPL.md  Six Sources of Overhead.md  Timing omp_get_wtime.md
(+81 files in other folders)
